--- a/index.html
+++ b/index.html
@@ -4,10 +4,38 @@
 <head>
     <!-- TODO: Include Font Awesome file here -->
     <!-- TODO: Include Google Fonts file here -->
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+
+	<title>ScriBBler</title>
+
+	<!-- Font Awesome CDN -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<!-- Google Fonts CDN -->
+	<link href="https://fonts.googleapis.com/css?family=Montez&display=swap" rel="stylesheet">
+	<!-- Bootstrap CDN-->
+	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js" integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm" crossorigin="anonymous"></script>
+	
+	<link rel="stylesheet" type="text/css" media="screen" href="./styles/common.css" /> 
+	<link rel="stylesheet" type="text/css" media="screen" href="./styles/index.css" /> 
 </head>
 
-<body>
+<body id="main">
     <!-- TODO: Include all your code for the header and home page here -->
+	<header>
+		<div class="page-header">
+			<div class="signingDetails">
+				<button class="btn btn-primary" type="signUp">Sign Up</button>
+				<button class="btn btn-primary" type="signIn">Sign In</button>
+			</div>
+		
+			<h2 id="main-header">ScriBBler</h2>
+			<h6 id="sub-header">Explore, Imagine, Create</h6>
+		</div>
+		
+	</header>
 </body>
 
 </html>
