Added 'All Post' and 'Create Post' buttons.

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
 		
 			<h2 id="main-header">ScriBBler</h2>
 			<h6 id="sub-header">Explore, Imagine, Create</h6>
-		</div>
-		
+		</div>		
 	</header>
+	<div class="postButtons">
+		<button class="btn btn-default" type="button">All Posts</button>
+		<button class="btn btn-default" type="button">Create Post</button>
+	</div>
 </body>
-
 </html>
