--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
                         </div>
                       </div>
                       <div class="modal-footer border-top-0 d-flex justify-content-center">
-                        <button type="submit" class="btn btn-success" style="width: 500px;">Sign Up</button>
+                        <button type="submit" class="btn btn-success" style="width: 500px;" href="index.html">Sign Up</button>
                       </div>
                     </form>
                   </div>
                 </div>
               </div>
               <button type="button" class="button-class" data-toggle="modal" 
-              data-target="#signin-form">Sign In</button>
+              data-target="#signin-form" href="index.html">Sign In</button>
               <div class="modal" tabindex="-1" role="dialog" id="signin-form">
                   <div class="modal-dialog" role="document">
                     <div class="modal-content">
